2005-05-09  Darin Adler  <darin@apple.com>

        - checked in a result for the Flash replacement test that Dave added

        * layout-tests/fast/dynamic/flash-replacement-test-expected.txt: Added.
        Hope it's right! If not, Dave can update it.

2005-05-09  Darin Adler  <darin@apple.com>

        * Makefile.am: Don't set up PBXIntermediatesDirectory explicitly;
        Not needed to make builds work, spews undesirable error messages too.

        * WebCore.pbproj/project.pbxproj: Remove unneeded $(DSTROOT) in framework paths.

2005-05-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Kevin.

	- remove some of the uses of upstream/downstream DoNotStayInBlock
	
        * khtml/editing/markup.cpp:
	(khtml::createMarkup): Instead of using upstream to decide if a	line break should be 
	added at the end, use inSameParagraph.
        * khtml/editing/selection.cpp:
        (khtml::Selection::debugPosition): Remove the code to print upstream and downstream,
	the selection endpoints themselves are adequate for debugging and are what we use for
	layout tests.
        * khtml/xml/dom2_rangeimpl.cpp:
        (DOM::RangeImpl::editingStartPosition): Skip a possible paragraph break at the start
	of the selection in a more explicit way to avoid DoNotStayInBlock.

2005-05-07  David Harrison  <harrison@apple.com>

        Reviewed by John.

        <rdar://problem/4110366> Deleting text at the end of email moves insertion point to the top of the document
        
        * khtml/editing/htmlediting.cpp:
        (khtml::DeleteSelectionCommand::handleGeneralDelete):
        Update m_upstreamStart when deleting m_downstreamEnd.node() if the former is no longer in the document.
        Better to update here than trying to recover later in calculateEndingPosition().

2005-05-07  David Harrison  <harrison@apple.com>
        
        Remove workaround for <rdar://problem/4103339>.
        
        * khtml/editing/htmlediting.cpp: