@@ -1,0 +1,52 @@
+<html> 
+<head>
+
+<style>
+.editing { 
+    border: 2px solid red; 
+    font-size: 24px; 
+}
+.explanation { 
+    border: 2px solid blue; 
+    padding: 12px; 
+    font-size: 24px; 
+    margin-bottom: 24px;
+}
+.scenario { margin-bottom: 16px;}
+.scenario:first-line { font-weight: bold; margin-bottom: 16px;}
+.expected-results:first-line { font-weight: bold }
+</style>
+<script src=../editing.js language="JavaScript" type="text/JavaScript" ></script>
+
+<script>
+
+function editingTest() {
+    moveSelectionForwardByLineCommand();
+    extendSelectionForwardByLineCommand();
+    extendSelectionForwardByLineCommand();
+    deleteCommand();
+}
+
+</script>
+
+<title>Editing Test</title> 
+</head> 
+<body>
+
+<div class="explanation">
+<div class="scenario">
+Tests: 
+<br>
+Delete at the end of document when there is a BR following a P.
+<br>
+This is a test case for rdar://problem/4110366
+</div>
+<div class="expected-results">
+Expected Results:
+<br>
+Red box with four lines.  The second line is a nested red box with the word "hello".  The other three lines are empty.
+<br>
+Selection is a caret at the start of the fourth line.
+</div>
+</div>
+<div contenteditable id="root" class="editing"><p id="test" class="editing">hello</p><p class="editing"><br></p><br></div><script>runEditingTest();</script></body></html>
