@@ -1,3 +1,10 @@
+2005-05-09  David Harrison  <harrison@apple.com>
+
+        Add layout test for <rdar://problem/4110366>.
+
+        * layout-tests/editing/deleting/delete-at-paragraph-boundaries-011-expected.txt: Added.
+        * layout-tests/editing/deleting/delete-at-paragraph-boundaries-011.html: Added.
+
 2005-05-09  Darin Adler  <darin@apple.com>
 
         - checked in a result for the Flash replacement test that Dave added
